#64: Added watched & liked logic to the show details